upgrade api and swagger file
